--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,11 @@
     <string name="menu_settings">Settings</string>
     <string name="budget_goals">Budget Goals</string>
     <string name="categories">Categories</string>
+    <string name="account">Account</string>
+    <string name="close_button">Close</string>
+    <string name="account_name">Account Name</string>
+    <string name="account_type">Account Type</string>
+    <string name="account_amount">Account Amount</string>
+    <string name="save_changes">Save Changes</string>
+
 </resources>
