--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,5 +45,7 @@
     <string name="repeat_transaction">Repeat Transaction</string>
     <string name="upload_receipt">Upload Receipt</string>
     <string name="attach_receipt">Attach Receipt</string>
-
+    <string name="set_goals">Set Goals</string>
+    <string name="custom">Custom</string>
+    <string name="all_time">All Time</string>
 </resources>
